<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Background"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/enterHeight"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/enter_height"
            style="@style/TextStyle"/>

    <EditText
            android:layout_width="@dimen/inputWidth"
            android:layout_height="wrap_content"
            android:hint="@string/height_hint"
            android:id="@+id/enterHeightBox"
            app:layout_constraintTop_toBottomOf="@id/enterHeight"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/EditTextStyle"
            android:inputType="number"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/enterWeight"
            app:layout_constraintTop_toBottomOf="@id/enterHeightBox"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/enter_weight"
            style="@style/TextStyle"/>

    <EditText
            android:layout_width="@dimen/inputWidth"
            android:layout_height="wrap_content"
            android:hint="@string/weight_hint"
            android:id="@+id/enterWeightBox"
            app:layout_constraintTop_toBottomOf="@id/enterWeight"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/EditTextStyle"
            android:inputType="number"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/calculateButton"
            app:layout_constraintTop_toBottomOf="@id/enterWeightBox"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="@dimen/textSize"
            android:layout_margin="@dimen/textMargin"
            android:text="@string/calculate"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bmiResult"
            app:layout_constraintTop_toBottomOf="@id/calculateButton"
            app:layout_constraintLeft_toRightOf="@id/resultPic"
            tools:text="Your BMI is: 19.1"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/TextStyle"/>

    <ImageView
            android:layout_width="@dimen/picWidth"
            android:layout_height="@dimen/picHeight"
            android:id="@+id/resultPic"
            app:layout_constraintTop_toBottomOf="@id/calculateButton"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="@dimen/textMargin"
            tools:srcCompat="@drawable/overweight"
            android:layout_marginTop="@dimen/textMargin"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resultTitle"
            app:layout_constraintTop_toBottomOf="@id/bmiResult"
            app:layout_constraintLeft_toRightOf="@id/resultPic"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="Normal weight"
            style="@style/TextStyle"/>

    <TextView
            android:layout_width="@dimen/descriptionWidth"
            android:layout_height="wrap_content"
            android:id="@+id/description"
            app:layout_constraintTop_toBottomOf="@id/resultTitle"
            app:layout_constraintLeft_toRightOf="@id/resultPic"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/TextStyle"
            tools:text="@string/normalWeightDescription"/>


</android.support.constraint.ConstraintLayout>